Updated template for cpspwg. Initial graphics and layout

--- a/index.html
+++ b/index.html
@@ -3,50 +3,62 @@ layout: default
 title: Home
 ---
 <section class="home home-title">
-  <hgroup>
-    <h1 style="color:black;">This Collaboration</h1>
-    <img class="logo" src="{{ site.baseurl }}/assets/electric-cables.jpg" alt="TE Challenge"> <!-- size of image set in style.css "home-title img" -->
-    <h2>Exposing Powerful Techniques for this Collaboration</h2>
-  </hgroup>
-</section>
-<section class="home home-about" id="#home-about">
-  <div class="section-container">
-    <div class="section-content">
-<!-- NEWS Banner insert -->
-<!-- End Banner insert -->
-<hr />
+	<hgroup>
+		<h1 style="color:#296DA0;">CPS Public Working Group</h1>
+		<!-- size of image set in style.css "home-title img" -->
+		<!-- <img class="logo" src="{{ site.baseurl }}/assets/logo.png" alt="CPS PWG"> 
+			<h2>Exposing Powerful Techniques for this Collaboration</h2>
+		--> 
+		</hgroup>
+	</section>
+	<section class="home home-about" id="#home-about">
+		<div class="section-container">
+			<div class="section-content">
+				<!-- NEWS Banner insert -->
+				<!-- End Banner insert -->
+				<hr />
 
-<!-- Ballon Links -->
-	<h2 class="section-title">What is this Collaboration?</h2>
-	<p>Discussion ....</p>
+				<!-- Ballon Links -->
+				<h2 class="section-title">What is this Collaboration?</h2>
+				<p class="lead">The impacts of CPS will be revolutionary and pervasive – this is evident today in emerging smart cars, intelligent buildings, robots, unmanned vehicles, and medical devices. Realizing the future promise of CPS will require interoperability between elements and systems, supported by new reference architectures and common definitions and lexicons. Addressing the problems and opportunities of CPS requires broad collaboration to develop a consensus around these concepts, and a shared understanding of the essential roles of timing and cybersecurity. To this end, NIST has established the CPS Public Working Group (CPS PWG), which is open to all, to foster and capture inputs from those involved in CPS, both nationally and globally.</p>
+				
 
-      <ul class="audiences">
-        <li>
-          <div class="icon">
-            <i class="fa fa-info"></i>
-          </div>
-          <h3><a href="http://localhost:4000/NistPagesTemplate">Learn</a></h3>
-          Learn about this collaboration
-        </li>
-        <li>
-          <div class="icon">
-            <i class="fa fa-book"></i>
-          </div>
-          <h3><a href="{{ site.baseurl }}/library">Library</a></h3>
-          Videos, presentations, and documents
-        </li>
-		<!-- Add additional balloons -- no more than 4 total recommended 
-        <li>
-          <div class="icon">
-            <i class="fa <<font awsome name>>"></i>
-          </div>
-          <h3><a href="{{ site.baseurl }}/library"><<folder name>></a></h3>
-          description
-        </li>
-		-->
-      </ul>
-    </div>
-  </div>
-</section>
-<!-- End Ballon Links -->
+				<ul class="audiences">
+					<li>
+						<div class="icon">
+							<i class="fa fa-info fa-lg"></i>
+						</div>
+						<h3><a href="http://localhost:4000/cpspwg">About Us</a></h3>
+						Learn about this collaboration
+					</li>
+					<li>
+						<div class="icon">
+							<i class="fa fa-group fa-lg"></i>
+						</div>
+						<h3><a href="{{ site.baseurl }}/library">Working Groups</a></h3>
+						Ref Arch, Trustworthiness, Timing, Data, Use Case
+					</li>
+					<li>
+						<div class="icon">
+							<i class="fa fa-book fa-lg"></i>
+						</div>
+						<h3><a href="{{ site.baseurl }}/library">Resources</a></h3>
+						Videos, presentations, and documents
+					</li>
+					<!-- Add additional balloons -- no more than 4 total recommended 
+					<li>
+					  <div class="icon">
+						<i class="fa <<font awsome name>>"></i>
+					  </div>
+					  <h3><a href="{{ site.baseurl }}/library"><<folder name>></a></h3>
+					  description
+					</li>
+					-->
+				</ul>
+			</div>
+		</div>
+	</section>
+	<!-- End Ballon Links -->
+	
 
+	
