Added working group pages and about us

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ title: Home
 									<div class="icon">
 										<i class="fa fa-info fa-lg" style="vertical-align:-25%"></i>
 									</div>
-									<h3><a href="http://localhost:4000/cpspwg">About Us</a></h3>
+									<h3><a href="{{ site.baseurl }}/aboutus">About Us</a></h3>
 									Learn about this collaboration
 								</li>
 								<li>
