updated banner for current status

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@ title: Home
 						<div class="section-content">
 							<!-- NEWS Banner insert -->
 							<h1>&nbsp;</h1>
-					<h1> CPS PWG Draft CPS Framework Released for Public Comments September 2015</h1>
+					<h1>CPS PWG Draft CPS Framework</h1>
 					<table style="width:100%">
 						<tr>
 							<td style="width:50%;;padding:15px;">
-								<p>The CPS Public Working Group has now completed the Draft CPS Framework, and invites all interested individuals and organizations to review it and to provide your comments and input during a 45-day public comment period, which ended on November 2, 2015.</p>
+								<p>The CPS Public Working Group has completed the Draft CPS Framework, and a public comment period ending November 2, 2015 has now been completed. A revised document will be made available in the future after addressing comments and making additional improvements.</p>
 								<p>The Draft CPS Framework is freely available for download <a href="https://s3.amazonaws.com/nist-sgcps/cpspwg/pwgglobal/CPS_PWG_Draft_Framework_for_Cyber-Physical_Systems_Release_0_8_September_2015.pdf">here</a>. An additional Technical Annex, Timing Framework for Cyber-Physical Systems, is also freely available for download <a href="https://s3.amazonaws.com/nist-sgcps/cpspwg/files/pwgglobal/CPS_PWG_Timing_Annex_for_Draft_Framework_for_Cyber-Physical_Systems_Release_0.8_September_2015.pdf">here</a>.</p>
 							</td>
 							<td style="width:50%;padding:15px;"><img style="width:100%;" alt="NIST CPS PWG Draft CPS Framework, Release 0.8, September 2015" src="{{ site.baseurl }}/assets/Draft-CPS-Framework-Release-0.8.png"></td>
@@ -85,7 +85,7 @@ title: Home
 									<div class="icon">
 										<i class="fa fa-group fa-lg" style="vertical-align:-25%"></i>
 									</div>
-									<h3><a href="{{ site.baseurl }}/library">Working Groups</a></h3>
+									<h3><a href="{{ site.baseurl }}/community">Working Groups</a></h3>
 									Ref Arch, Trustworthiness, Timing, Data, Use Case
 								</li>
 								<li>
