resolve energetics comments

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ title: Home
 						<div class="section-content">
 							<!-- NEWS Banner insert -->
 							<h1>&nbsp;</h1>
-					<h1>CPS PWG Draft CPS Framework</h1>
+					<h1>CPS PWG Draft Cyber-Physical Systems (CPS) Framework</h1>
 					<table style="width:100%">
 						<tr>
 							<td style="width:50%;;padding:15px;">
