Corrected ballooon titles

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ title: Home
 										<i class="fa fa-group fa-lg" style="vertical-align:-25%"></i>
 									</div>
 									<h3><a href="{{ site.baseurl }}/community">Working Groups</a></h3>
-									Ref Arch, Trustworthiness, Timing, Data, Use Case
+									Vocabulary and Reference Architecture, Cybersecurity and Privacy, Timing, Data Interoperability, Use Cases
 								</li>
 								<li>
 									<div class="icon">
