--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@ title: Home
 					<table style="width:100%">
 						<tr>
 							<td style="width:50%;;padding:15px;">
-								<p>The CPS Public Working Group has completed the Draft CPS Framework, and a public comment period ending November 2, 2015 has now been completed. A revised document will be made available in the future after addressing comments and making additional improvements.</p>
-								<p>The Draft CPS Framework is freely available for download <a href="https://s3.amazonaws.com/nist-sgcps/cpspwg/pwgglobal/CPS_PWG_Draft_Framework_for_Cyber-Physical_Systems_Release_0_8_September_2015.pdf">here</a>. An additional Technical Annex, Timing Framework for Cyber-Physical Systems, is also freely available for download <a href="https://s3.amazonaws.com/nist-sgcps/cpspwg/files/pwgglobal/CPS_PWG_Timing_Annex_for_Draft_Framework_for_Cyber-Physical_Systems_Release_0.8_September_2015.pdf">here</a>. The consolidated list of comments are available <a href="https://s3.amazonaws.com/nist-sgcps/cpspwg/files/pwgglobal/CPSFrameworkIssuesConsolidated_20151119.xlsm">here</a>.
-								Finally, a working spreadsheet with the current state of the review process is available <a href="https://s3.amazonaws.com/nist-sgcps/cpspwg/files/pwgglobal/CPSFrameworkIssuesConsolidatedWorking.xlsm">here</a>.
+								<p>The CPS Public Working Group has completed the CPS Framework Version&nbsp;1.0</p>
+								<p>The CPS Framework is freely available for download <a href="https://s3.amazonaws.com/nist-sgcps/cpspwg/files/pwgglobal/CPS_PWG_Draft_Framework_for_Cyber_Physical_Systems_Release_1_0Final.pdf">here</a>. <br/>An additional Technical Annex, Timing Framework for Cyber-Physical Systems, is also freely available for download <a href="https://s3.amazonaws.com/nist-sgcps/cpspwg/files/pwgglobal/CPS_PWG_Timing_Annex_for_Draft_Framework_for_Cyber-Physical_Systems_Release_0.8_September_2015.pdf">here</a>. 
 								</p>
 							</td>
 							<td style="width:50%;padding:15px;"><img style="width:100%;" alt="NIST CPS PWG Draft CPS Framework, Release 0.8, September 2015" src="{{ site.baseurl }}/assets/Draft-CPS-Framework-Release-0.8.png"></td>
