--- a/index.html
+++ b/index.html
@@ -55,16 +55,23 @@ title: Home
 						<div class="section-content">
 							<!-- NEWS Banner insert -->
 							<h1>&nbsp;</h1>
-					<h1>CPS PWG Draft Cyber-Physical Systems (CPS) Framework</h1>
+					<h1>CPS PWG Cyber-Physical Systems (CPS) Framework V1.0</h1>
 					<table style="width:100%">
 						<tr>
-							<td style="width:50%;;padding:15px;">
+							<td style="width:40%;padding:15px;"><img style="width:100%;" alt="CPS Conceptual Model" src="{{ site.baseurl }}/assets/CPSFrameworkModel.png"></td>
+							<td style="width:60%;padding:15px;"><img style="width:100%;" alt="CPS Framework – Domains, Facets, Aspects" src="{{ site.baseurl }}/assets/CPSFramework.png"></td>
+						</tr>
+						<tr>
+							<td style="width:40%;padding:15px;"><strong>CPS Conceptual Model</strong></td>
+							<td style="width:60%;padding:15px;"><strong>CPS Framework – Domains, Facets, Aspects</strong></td>
+						</tr>
+						<tr>
+							<td style="width:17%;;padding:15px;" colspan="2">
 								<p>The CPS Public Working Group has completed the CPS Framework Version&nbsp;1.0</p>
 								<p>The CPS Framework is freely available for download <a href="https://s3.amazonaws.com/nist-sgcps/cpspwg/files/pwgglobal/CPS_PWG_Draft_Framework_for_Cyber_Physical_Systems_Release_1_0Final.pdf">here</a>. <br/>An additional Technical Annex, Timing Framework for Cyber-Physical Systems, is also freely available for download <a href="https://s3.amazonaws.com/nist-sgcps/cpspwg/files/pwgglobal/CPS_PWG_Timing_Annex_for_Draft_Framework_for_Cyber-Physical_Systems_Release_0.8_September_2015.pdf">here</a>. 
 								</p>
 							</td>
-							<td style="width:50%;padding:15px;"><img style="width:100%;" alt="NIST CPS PWG Draft CPS Framework, Release 0.8, September 2015" src="{{ site.baseurl }}/assets/Draft-CPS-Framework-Release-0.8.png"></td>
-							</tr>
+						</tr>
 						</table>							
 							<!-- End Banner insert -->
 							<hr />
