updated to release 1.0

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ title: Home
 						<div class="section-content">
 							<!-- NEWS Banner insert -->
 							<h1>&nbsp;</h1>
-					<h1>CPS PWG Cyber-Physical Systems (CPS) Framework V1.0</h1>
+					<h1>CPS PWG Cyber-Physical Systems (CPS) Framework Release 1.0</h1>
 					<table style="width:100%">
 						<tr>
 							<td style="width:40%;padding:15px;"><img style="width:100%;" alt="CPS Conceptual Model" src="{{ site.baseurl }}/assets/CPSFrameworkModel.png"></td>
@@ -67,7 +67,7 @@ title: Home
 						</tr>
 						<tr>
 							<td style="width:17%;;padding:15px;" colspan="2">
-								<p>The CPS Public Working Group has completed the CPS Framework Version&nbsp;1.0</p>
+								<p>The CPS Public Working Group has completed the CPS Framework Release&nbsp;1.0</p>
 								<p>The CPS Framework is freely available for download <a href="https://s3.amazonaws.com/nist-sgcps/cpspwg/files/pwgglobal/CPS_PWG_Draft_Framework_for_Cyber_Physical_Systems_Release_1_0Final.pdf">here</a>. <br/>An additional Technical Annex, Timing Framework for Cyber-Physical Systems, is also freely available for download <a href="https://s3.amazonaws.com/nist-sgcps/cpspwg/files/pwgglobal/CPS_PWG_Timing_Annex_for_Draft_Framework_for_Cyber-Physical_Systems_Release_0.8_September_2015.pdf">here</a>. 
 								</p>
 							</td>
