added notice of communications requirements activity

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ title: Home
 								<p>The CPS Public Working Group has completed the CPS Framework Release&nbsp;1.0</p>
 								<p>The CPS Framework is freely available for download <a href="https://s3.amazonaws.com/nist-sgcps/cpspwg/files/pwgglobal/CPS_PWG_Framework_for_Cyber_Physical_Systems_Release_1_0Final.pdf">here</a>. <br/>An additional Technical Annex, Timing Framework for Cyber-Physical Systems, is also freely available for download <a href="https://s3.amazonaws.com/nist-sgcps/cpspwg/files/pwgglobal/CPS_PWG_Timing_Annex_for_Draft_Framework_for_Cyber-Physical_Systems_Release_0.8_September_2015.pdf">here</a>. 
 								</p>
+							<hr><p>Note 20170513: NIST is convening a short term (summer 2017) collaboration to produce a white paper on communications requirements for federated testbeds. If you are interested contact Dr. Martin Burns (martin dot burns at nist dot gov) for more information.</p><hr>
 							</td>
 						</tr>
 						</table>							
